--- a/src/main/webapp/styles/content.css
+++ b/src/main/webapp/styles/content.css
@@ -423,7 +423,7 @@
     padding-top: 2px;
     padding-bottom: 2px;
     font-size: 16px;
-    text-align: right;
+    text-align: left;
 }
 
 #barcode-editing form .checksum {
