Fixed the "not approved" img position.

--- a/src/main/webapp/styles/content.css
+++ b/src/main/webapp/styles/content.css
@@ -47,6 +47,10 @@
     margin-bottom: 4px;
 }
 
+.products-list .product img.not-approved {
+    position: absolute;
+}
+
 #product #product-info-quick h3,
 #product #product-info-edit h3,
 #product #product-info h3,
