Fixed the selected category style (in the products view)

--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -166,8 +166,16 @@ a:hover {
     color: #000;
 }
 
+
+
 a.ico {
     padding-left: 20px;
+}
+
+#categories .selected {
+    color: #0072bc;
+    font-weight: bold;
+    text-decoration: underline;
 }
 
 hr {
