--- a/src/main/webapp/styles/content.css
+++ b/src/main/webapp/styles/content.css
@@ -14,6 +14,16 @@
     margin-right: 10px;
 }
 
+.products-list.columns-3 .columns-1 {
+	float: right;
+    width: 231px;
+}
+
+.products-list.columns-3 .columns-2{
+	float: left;
+    width: 478px;
+}
+
 .products-list .product {
     float: left;
     position: relative;
