Reverted product layout changes

--- a/src/main/webapp/styles/content.css
+++ b/src/main/webapp/styles/content.css
@@ -14,7 +14,7 @@
     margin-right: 10px;
 }
 
-.products-list.columns-3 .columns-1 {
+/*.products-list.columns-3 .columns-1 {
 	float: right;
     width: 231px;
 }
@@ -22,7 +22,7 @@
 .products-list.columns-3 .columns-2{
 	float: left;
     width: 494px;
-}
+}*/
 
 .products-list .product {
     float: left;
