Small and simple design change.

--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -180,6 +180,7 @@ a.ico {
     color: #ff7b0f;
     font-weight: bold;
     text-decoration: underline;
+    border-bottom: none;
     font-size: 13px;
 }
 
