Tekstu redagavimas E redagavimas Bugfix, kad nenuluztu, kai neprisijunges naudotojas

--- a/src/main/webapp/styles/reset.css
+++ b/src/main/webapp/styles/reset.css
@@ -32,6 +32,11 @@ table, td, th {
     vertical-align: middle;
 }
 
+td.edit-form-vertical-name {
+    text-align: right;
+    padding-right: 6px;
+}
+
 blockquote:before,
 blockquote:after,
 q:before,
